[gd_scene load_steps=3 format=3 uid="uid://dsndmv01wweip"]

[ext_resource type="Theme" uid="uid://c6lscnkcsidri" path="res://Assets/new_theme.tres" id="1_fvcc5"]
[ext_resource type="Script" path="res://Scripts/audio_settings.gd" id="2_jonjh"]

[node name="AudioSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fvcc5")
script = ExtResource("2_jonjh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ControlsPanelContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="AudioContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ControlsPanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ControlList" type="HBoxContainer" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterVolumeLaber" type="Label" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList"]
layout_mode = 2
text = "Master Volume"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList"]
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 4
step = 5.0
value = 100.0
scrollable = false

[node name="ControlList2" type="HBoxContainer" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolumeLaber" type="Label" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList2"]
layout_mode = 2
text = "Music Volume"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 4
value = 100.0
scrollable = false

[node name="ControlList3" type="HBoxContainer" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFXVolumeLaber" type="Label" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList3"]
layout_mode = 2
text = "SFX Volume"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8

[node name="SFXVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 4
value = 100.0
scrollable = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/ControlsPanelContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/ControlsPanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "Back"
icon_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/ControlsPanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ApplyButton" type="Button" parent="PanelContainer/MarginContainer/ControlsPanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "Apply"
icon_alignment = 1

[connection signal="drag_ended" from="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList/MasterVolumeSlider" to="." method="_on_master_h_slider_drag_ended"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList2/MarginContainer/MusicVolumeSlider" to="." method="_on_music_h_slider_drag_ended"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/ControlsPanelContainer/AudioContainer/ControlList3/MarginContainer/SFXVolumeSlider" to="." method="_on_sfxh_slider_drag_ended"]
